--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
           </div>
         </aside>
         <div class="text-center lg:w-2/3  flex flex-wrap lg:flex-nowrap justify-center lg:justify-between gap-6 lg:gap-16 items-center">
-          <nav class="flex flex-col gap-4 w-1/3">
+          <nav class="flex flex-col lg:gap-3 w-1/3">
             <header class="footer-title">Company</header>
             <div class="flex flex-col gap-3 ">
               <a class="link link-hover">Careers</a>
